--- a/index.html
+++ b/index.html
@@ -9,5 +9,17 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      ;(function () {
+        var mq = window.matchMedia('(prefers-color-scheme: dark)')
+        function apply(dark) {
+          document.documentElement.classList.toggle('dark', dark)
+        }
+        apply(mq.matches)
+        mq.addEventListener('change', function (e) {
+          apply(e.matches)
+        })
+      })()
+    </script>
   </body>
 </html>
