chore: favicon, og tag

--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>image-optimizer</title>
+    <title>Image Optimizer — Free Browser-Based Image Compression</title>
+    <meta name="description" content="Free browser-based image compression tool. Optimize unlimited images to WebP, AVIF, JPEG, PNG — no upload limits, no servers, no sign-up required." />
+
+    <!-- Open Graph (Facebook, KakaoTalk, etc.) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Image Optimizer — Free Browser-Based Image Compression" />
+    <meta property="og:description" content="Free browser-based image compression tool. Optimize unlimited images to WebP, AVIF, JPEG, PNG — no upload limits, no servers, no sign-up required." />
+    <meta property="og:url" content="https://dev2820.github.io/image-optimizer/" />
+    <meta property="og:image" content="https://dev2820.github.io/image-optimizer/android-chrome-512x512.png" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Image Optimizer — Free Browser-Based Image Compression" />
+    <meta name="twitter:description" content="Free browser-based image compression tool. Optimize unlimited images to WebP, AVIF, JPEG, PNG — no upload limits, no servers, no sign-up required." />
+    <meta name="twitter:image" content="https://dev2820.github.io/image-optimizer/android-chrome-512x512.png" />
   </head>
   <body>
     <div id="root"></div>
